[package]
name = "yfc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yfc_derive = {optional = true, path = "../yfc_derive"}
ybc = {git = "https://github.com/wdcocq/ybc", optional = true, branch = "yew-next"}
yew = "0.20"
strum = { version = "0.24", features = ["derive"] }

web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlSelectElement", "HtmlTextAreaElement"] }
validator = { version = "0.16", optional = true }
serde = { version = "1.0", optional = true, features = ["rc"] }

[dev-dependencies]
yew = {version = "0.20", features = ["ssr", "csr"]}
regex = "1.7"
wasm-bindgen-test = "0.3"
wasm-bindgen = "0.2"
gloo = { version = "0.8", features = ["futures"]}

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.26", features = ["full"] }

[features]
default = ["derive"]
derive = ["dep:yfc_derive"]
ybc = ["dep:ybc"]
validator = ["dep:validator"]
serde = ["dep:serde", "yfc_derive?/serde"]
